页面 5d4abeba65b2987cbf0f86dd 构建

--- a/template/index.html
+++ b/template/index.html
@@ -13,6 +13,7 @@
     <!-- shell -->
   </div>
   <!-- PAGE_DATA_INJECT_HERE -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
   <!-- built files will be auto injected -->
 </body>
 
