--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
     <!-- shell -->
   </div>
   <!-- PAGE_DATA_INJECT_HERE -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
+  <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
   <!-- built files will be auto injected -->
 </body>
 
